03.business-os/AICompanyManager/900.meta/r8z_v10gc3h_reproduce_v10gc3g_syntax_temp_only_20260504_064810/040_temp_syntax.out
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/r8z_v10gc3h_reproduce_v10gc3g_syntax_temp_only_20260504_064810/010_temp_core_repatch_v10gc3g.js:12681
    function aicmR8zV10gc3gInsertReviewDecisionAction(renderConfirm(row, mode, id), row) {
                                                                   ^

SyntaxError: Unexpected token '('
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
